cant get anything to appear in canvas

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link href="Content/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+    <script src="../../lib/easeljs-NEXT.min.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,7 +33,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" >
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -82,7 +84,9 @@
                         <hr class="star-light">
                         <p> </p>
                         <p id="0"></p>
+                        
                         <hr class="star-light">
+                        <canvas id="canvas" width="250" height="250"></canvas>
                     </div>
                 </div>
             </div>
