--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-    <script src="../../lib/easeljs-NEXT.min.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -190,16 +189,16 @@
     <!-- Custom Theme JavaScript -->
     <script src="Scripts\js\freelancer.js"></script>
 
-    <!-- Text JavaScript -->
-    <script src="Scripts/app.js"></script>
+
 
 
     <!-- CreateJS Libraries -->
-    <script src="Scripts/lib/EaselJS/lib/easeljs-0.8.2.min.js"></script>
-    <script src="Scripts/lib/TweenJS/lib/tweenjs-0.6.2.min.js"></script>
-    <script src="Scripts/lib/SoundJS/lib/soundjs-0.6.2.min.js"></script>
-    <script src="Scripts/lib/PreloadJS/lib/preloadjs-0.6.2.min.js"></script>
-
+    <script src="Scripts\lib\EaselJS\lib\easeljs-0.8.2.min.js"></script>
+    <script src="Scripts\lib\TweenJS\lib\tweenjs-0.6.2.min.js"></script>
+    <script src="Scripts\lib\SoundJS\lib\soundjs-0.6.2.min.js"></script>
+    <script src="Scripts\lib\PreloadJS\lib\preloadjs-0.6.2.min.js"></script>
+    <!-- Text JavaScript -->
+    <script src="Scripts/app.js"></script>
 </body>
 
 </html>
